[project]
name = "dog-classifier-api"
version = "0.1.0"
description = "FastAPI service for dog breed classification using EfficientNet-B0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.42.0",
]
